<resources>
    <string name="app_name">Simple Registration Form</string>

    <!-- Use cases -->
    <string name="fullname_empty">Full name couldn\'t be empty. Please enter your full name</string>
    <string name="phone_empty">Phone number couldn\'t be empty. Please enter your phone number</string>
    <string name="country_not_chosen">Country is not chosen yet. Please choose your country</string>
    <string name="address_empty">Address couldn\'t be empty. Please enter your address</string>
    <string name="password_invalid">Password should be at least 8 characters. Please use strongest password</string>
    <string name="password_empty">Password couldn\'t be empty. Please enter your password</string>
    <string name="phone_or_password_error">Phone number or password went wrong, Please try again</string>
    <string name="something_went_wrong">Something went wrong. Please, try again</string>
    <string name="user_already_exist">Such a phone number is available in the system. Please go to the login section</string>

    <!-- UI -->
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="version">Version 1.0</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="choose_image_for_profile">Choose image for profile</string>
    <string name="gallery_or_camera">From where do you want to take the photo?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_country">Choose country</string>
    <string name="more_icon">more icon</string>
    <string name="users_does_not_exist_yet">Users doesn\'t exist yet.</string>
    <string name="registered_users">Registered users</string>
    <string name="logout">Logout</string>


</resources>