<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fillViewport="true"
    tools:context=".presentation.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/register"
            android:textColor="@color/primaryTextColor"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <FrameLayout
            android:id="@+id/profile_image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_ellipse"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="87dp"
                android:layout_height="87dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_default_user" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/choose_image_for_profile"
                android:src="@drawable/ic_add" />
        </FrameLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/full_name"
            app:boxStrokeWidth="0.1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image_layout"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/field_background"
                android:fontFamily="@font/sf_pro_display_regular"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/phone_number"
            app:boxStrokeWidth="0.1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/full_name_til"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/field_background"
                android:fontFamily="@font/sf_pro_display_regular"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/county_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/country"
            app:boxStrokeWidth="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_til"
            app:layout_constraintWidth_percent="0.8">

            <Spinner
                android:id="@+id/county"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/field_background"
                android:padding="15dp"
                android:spinnerMode="dialog"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/spinner_item" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/address"
            app:boxStrokeWidth="0.1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/county_til"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/field_background"
                android:fontFamily="@font/sf_pro_display_regular"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            app:boxStrokeWidth="0.1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_til"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/field_background"
                android:fontFamily="@font/sf_pro_display_regular"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_til"
            app:layout_constraintWidth_percent="0.8" />


        <TextView
            android:id="@+id/txt_version_ro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/version"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>