<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fillViewport="true"
    tools:context=".presentation.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/login"
            android:textColor="@color/primaryTextColor"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@color/white"
            android:hint="@string/phone_number"
            app:boxStrokeWidth="0.1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/field_background"
                android:fontFamily="@font/sf_pro_display_regular"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/white"
            android:hint="@string/password"
            app:boxStrokeWidth="0.1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_til"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/field_background"
                android:fontFamily="@font/sf_pro_display_regular"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/register"
            android:textColor="@color/primaryColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_til"
            app:strokeWidth="0dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/version"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>